# scala-site

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  maven_install.json  tailwind.config.js  tailwindcss.bzl
bazel/: config.bzl
src/main/resources/: BUILD.bazel
src/main/scala/com/rockthejvm/: BUILD.bazel  Main.scala
src/main/scala/com/rockthejvm/controllers/: BUILD.bazel
src/main/scala/com/rockthejvm/db/: BUILD.bazel  Db.scala
src/main/scala/com/rockthejvm/domain/: BUILD.bazel
src/main/scala/com/rockthejvm/repositories/: BUILD.bazel
src/main/scala/com/rockthejvm/services/: BUILD.bazel
src/main/scala/com/rockthejvm/views/: BUILD.bazel  ContactsView.scala  HomePage.scala
