load("@constants//:vars.bzl", "SCALA_VERSION_SUFFIX")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

scala_binary(
    name = "app",
    srcs = ["Main.scala"],
    main_class = "com.rockthejvm.Main",
    resources = ["//src/main/resources:all_resources"],
  
    deps = [
    "//src/main/scala/com/rockthejvm/controllers:controller",
    "//src/main/scala/com/rockthejvm/db:db",
    "//src/main/scala/com/rockthejvm/repositories:repositories",
    "//src/main/scala/com/rockthejvm/services:services",
    "//src/main/scala/com/rockthejvm/domain:domain",
    "@mvn//:dev_zio_zio_logging_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:dev_zio_zio_logging_slf4j_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:dev_zio_zio_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:ch_qos_logback_logback_classic"
  ],
   # resource_strip_prefix = "src/main/resources",
   # jvm_flags = ["-Dconfig.file=src/main/resources/application.conf"]
)

pkg_tar(
    name = "layer",
    srcs = [":app_deploy.jar"],
    package_dir = "/",
)

oci_image(
    name = "image",
    base = "@distroless_java",
    entrypoint = ["java", "-jar", "/app_deploy.jar"],
    tars = [":layer"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["scala-site:latest"],
    
)

