load("@constants//:vars.bzl", "SCALA_VERSION_SUFFIX")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
  name = "db",
  srcs = ["Db.scala",
  "DbConfig.scala",
  "DbMigrator.scala"],
  visibility = [
    "//src/main/scala/com/rockthejvm:__pkg__",
  ],
  deps = [
    "@mvn//:dev_zio_zio_http_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:dev_zio_zio_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:dev_zio_zio_config_typesafe_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:com_zaxxer_HikariCP",
    "@mvn//:io_getquill_quill_jdbc_zio_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:org_flywaydb_flyway_core",
    "//src/main/scala/com/rockthejvm/domain:domain",
  ]
)
