load("@constants//:vars.bzl", "SCALA_VERSION_SUFFIX")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
  name = "repositories",
  srcs = ["ContactsRepository.scala"],
  visibility = [
    "//src/main/scala/com/rockthejvm:__pkg__",
    "//src/main/scala/com/rockthejvm/services:__pkg__",
  ],
  deps = [
    "@mvn//:dev_zio_zio_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:io_getquill_quill_jdbc_zio_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:dev_zio_zio_config_magnolia_{}".format(SCALA_VERSION_SUFFIX),
    "@mvn//:org_xerial_sqlite_jdbc",
    "//src/main/scala/com/rockthejvm/domain:domain",
  ]
)
