load("@constants//:vars.bzl", "SCALA_VERSION_SUFFIX")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")

scala_library(
  name = "views",
  srcs = ["ContactsView.scala","HomePage.scala","htmx/HtmxAttributes.scala"],
  visibility = [
    "//src/main/scala/com/rockthejvm:__pkg__",
    "//src/main/scala/com/rockthejvm/controllers:__pkg__",
  ],
  deps = [
    "@mvn//:com_lihaoyi_scalatags_{}".format(SCALA_VERSION_SUFFIX),
    "//src/main/scala/com/rockthejvm/domain:domain",
  ]
)
